# ChangeLog for dev-perl/Log-Log4perl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Log-Log4perl/ChangeLog,v 1.49 2009/05/06 15:54:49 tove Exp $

  06 May 2009; Torsten Veller <tove@gentoo.org> -Log-Log4perl-1.13.ebuild,
  -Log-Log4perl-1.20.ebuild:
  Cleanup

  04 May 2009; Raúl Porcel <armin76@gentoo.org> Log-Log4perl-1.21.ebuild:
  ia64/sparc stable wrt #268209

*Log-Log4perl-1.22 (03 May 2009)

  03 May 2009; Torsten Veller <tove@gentoo.org> +Log-Log4perl-1.22.ebuild:
  Version bump

  03 May 2009; Markus Meier <maekke@gentoo.org> Log-Log4perl-1.21.ebuild:
  amd64 stable, bug #268209

  02 May 2009; Torsten Veller <tove@gentoo.org> Log-Log4perl-1.21.ebuild:
  Stable on x86 (#268209)

*Log-Log4perl-1.21 (27 Mar 2009)

  27 Mar 2009; Torsten Veller <tove@gentoo.org> +Log-Log4perl-1.21.ebuild:
  Version bump

  30 Dec 2008; Torsten Veller <tove@gentoo.org> -Log-Log4perl-1.18.ebuild,
  -Log-Log4perl-1.19.ebuild:
  Cleanup

*Log-Log4perl-1.20 (16 Dec 2008)

  16 Dec 2008; Torsten Veller <tove@gentoo.org> +Log-Log4perl-1.20.ebuild:
  Version bump

*Log-Log4perl-1.19 (31 Oct 2008)

  31 Oct 2008; Torsten Veller <tove@gentoo.org> +Log-Log4perl-1.19.ebuild:
  Version bump

*Log-Log4perl-1.18 (30 Sep 2008)

  30 Sep 2008; Robin H. Johnson <robbat2@gentoo.org>
  +Log-Log4perl-1.18.ebuild:
  Version bump.

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -Log-Log4perl-1.02.ebuild,
  -Log-Log4perl-1.06.ebuild, -Log-Log4perl-1.08.ebuild,
  -Log-Log4perl-1.09.ebuild, -Log-Log4perl-1.10.ebuild,
  -Log-Log4perl-1.11.ebuild, -Log-Log4perl-1.12.ebuild:
  Cleanup

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> Log-Log4perl-1.13.ebuild:
  amd64 stable

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> Log-Log4perl-1.13.ebuild:
  ia64/sparc/x86 stable

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Log-Log4perl-1.12.ebuild:
  amd64 stable

*Log-Log4perl-1.13 (19 Oct 2007)
