@@ -1,18 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Log-Log4perl/Log-Log4perl-1.13.ebuild,v 1.3 2007/12/17 18:24:35 drac Exp $
-
-inherit perl-module
-
-DESCRIPTION="Log::Log4perl is a Perl port of the widely popular log4j logging package."
-SRC_URI="mirror://cpan/authors/id/M/MS/MSCHILLI/${P}.tar.gz"
-HOMEPAGE="http://log4perl.sourceforge.net/"
-
-SLOT="0"
-LICENSE="as-is"
-KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
-IUSE=""
-
-SRC_TEST="do"
-
-DEPEND="dev-lang/perl"
