@@ -1,6 +1,8 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Log-Log4perl/Log-Log4perl-1.20.ebuild,v 1.1 2008/12/16 13:47:32 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Log-Log4perl/Log-Log4perl-1.23.ebuild,v 1.1 2009/05/14 07:38:25 tove Exp $
+
+EAPI=2
 
 MODULE_AUTHOR="MSCHILLI"
 inherit perl-module
@@ -9,12 +11,10 @@ DESCRIPTION="Log::Log4perl is a Perl port of the widely popular log4j logging pa
 HOMEPAGE="http://log4perl.sourceforge.net/"
 
 SLOT="0"
-LICENSE="|| ( Artistic GPL-2 )"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
 IUSE="test"
 
-RDEPEND="dev-lang/perl
-	virtual/perl-Time-HiRes"
+RDEPEND="virtual/perl-Time-HiRes"
 DEPEND="${RDEPEND}
 	test? ( virtual/perl-Test-Simple )"
 
