@@ -1,10 +1,8 @@
-DIST Log-Log4perl-1.13.tar.gz 227363 RMD160 27e998d01a8f3ee35e651e5e9d917a5c023e9b1a SHA1 944e7b36f26a276ce7e6f7aa1056ec82900e6bdc SHA256 fda984df15c7c5e22d2605c72cbf5fa937f18a1a40793cc088c8d7aeb334d2c8
-DIST Log-Log4perl-1.20.tar.gz 238389 RMD160 27790806fc7cfbb5744851ba745ae8263c593c0f SHA1 41951071f48c244ef2fd9d61462d7249992dde45 SHA256 08b705f9bc802feb027761aa872c4fd39626042cb82cb43b9ddbb3014b19602e
 DIST Log-Log4perl-1.21.tar.gz 238764 RMD160 47cd4b90b4228358d3a1e3124477830128037431 SHA1 e033da7b6d8b0101b7587685513002212aca04ad SHA256 e0668cfab3fbc8130e08223211e9631ee8e18f146097bfadb6bdec16d02cd95f
 DIST Log-Log4perl-1.22.tar.gz 242955 RMD160 83ec1868fe1770ad60cfcb142f82f8940946b990 SHA1 d0db9a5ea90a4632a6a0924441ce5ed25139967b SHA256 bd725e8e3063d66b99606615ec4b50191e9827dcef14b1780bfefadfe0a71c1a
-EBUILD Log-Log4perl-1.13.ebuild 586 RMD160 0465660356f0fba01f9fc8550d54b966b4b92169 SHA1 c092a00438abf988a0fe5fd12662b57cf9b5c788 SHA256 aa0d69dd74d4c2a59c62eb16b8db9a7c6561a245ac50daf687992d12221c342d
-EBUILD Log-Log4perl-1.20.ebuild 652 RMD160 cd9a0ef4231391a45403f6432d906e493e26a7af SHA1 182f65d6d0c22a189dca26476a48444e27d66fea SHA256 7d42a9481b8bb81cceb1b190221dbe737515b9aaf91a1174db2369fc92113785
+DIST Log-Log4perl-1.23.tar.gz 244839 RMD160 69114a1eacea5fae7cf1a054f1696c2786b401e6 SHA1 7e9f7cb048a661adeba8d29c95aaa73f0aec241a SHA256 b00cc738b7c9e5673aeaf64e4f1156c69d1cd8b5bef869f64d6ea42782856d8b
 EBUILD Log-Log4perl-1.21.ebuild 616 RMD160 2b2c6b23ec26668ff8642d61bf5650ea47673855 SHA1 6a25505976e4f1ed4d6695fa40eb4e00ff33e48d SHA256 dd2e4da601915fba3fe2f56ce55418a4f51565fa89ec0e8b2581950b24787352
 EBUILD Log-Log4perl-1.22.ebuild 613 RMD160 80972a89eb4e39bf2754bbd08c1994cef02e4cfb SHA1 d6ba8317f38949b345b4a4fdd7512b169d1af594 SHA256 2ae11b3df6ea708c7ed44ea9d39dc38b10980b6be53662bec1efdd015ceefdf9
-MISC ChangeLog 6261 RMD160 9931293cdacb88ef2f512b7bb50ffe28213d06f8 SHA1 3a3a0b779e67ae735dea00758930de4be91e5309 SHA256 db9d32f9fc4a3f8c7519f400150f61a1999a4af63f3c8e60a8975bda0dd25cd8
+EBUILD Log-Log4perl-1.23.ebuild 613 RMD160 42e33264ce0493fe4272e12742d45341d8d9914d SHA1 ced19741a2dd459309337c351a20dcea5a64c068 SHA256 b1348892ef59a8b5c87627b9ed28674a00da17ef1da9a4370850de0525c737fb
+MISC ChangeLog 6386 RMD160 327796e34b07e532544012e97abbfdc236914c11 SHA1 c6264e221e14c64c11f74b36c94ebede124f39df SHA256 2862a7c305a283e842b22d4eb99b42d8bff84671131eab82d2012a5ab9f2159f
 MISC metadata.xml 157 RMD160 20eb42c177eede01b15cb26692a3cdf9d09dbebb SHA1 c0abc66887e1c41278649d0c0a75716a20f1ffd5 SHA256 6a11fd41a2a210a9760849de398ef8c62cf46cc742d09b2e1781def7848fa1ec
