@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Log-Log4perl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Log-Log4perl/ChangeLog,v 1.49 2009/05/06 15:54:49 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Log-Log4perl/ChangeLog,v 1.50 2009/05/14 07:38:25 tove Exp $
+
+*Log-Log4perl-1.23 (14 May 2009)
+
+  14 May 2009; Torsten Veller <tove@gentoo.org> +Log-Log4perl-1.23.ebuild:
+  Version bump
 
   06 May 2009; Torsten Veller <tove@gentoo.org> -Log-Log4perl-1.13.ebuild,
   -Log-Log4perl-1.20.ebuild:
